# pyobvector

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  RELEASE_NOTES.md  pyproject.toml
.github/workflows/: ci.yml  python-publish.yml
pyobvector/: __init__.py
pyobvector/client/: __init__.py  collection_schema.py  enum.py  exceptions.py  fts_index_param.py  hybrid_search.py  index_param.py  milvus_like_client.py  ob_client.py  ob_vec_client.py  ob_vec_json_table_client.py  partitions.py  schema_type.py  seekdb_engine.py
pyobvector/json_table/: __init__.py  json_value_returning_func.py  oceanbase_dialect.py  virtual_data_type.py
pyobvector/schema/: __init__.py  array.py  dialect.py  full_text_index.py  geo_srid_point.py  gis_func.py  match_against_func.py  ob_table.py  reflection.py  replace_stmt.py  sparse_vector.py  vec_dist_func.py  vector.py  vector_index.py
pyobvector/util/: __init__.py  compatible_sqlglot.py  ob_version.py  sparse_vector.py  vector.py
source/: conf.py  index.rst  modules.rst  pyobvector.client.rst  pyobvector.rst  pyobvector.schema.rst  pyobvector.util.rst
tests/: __init__.py  test_fts_index.py  test_geometry.py  test_hybrid_search.py  test_json_table.py  test_milvus_like_client.py  test_milvus_like_client_sparse_vector.py  test_ob_vec_client.py  test_ob_vec_client_sparse_vector.py  test_ob_vec_more_algorithm.py  test_oceanbase_dialect.py  test_partition_compile.py  test_reflection.py  test_seekdb_embedded.py
