[tool.poetry]
name = "pyobvector"
version = "0.2.1"
description = "A python SDK for OceanBase Vector Store, based on SQLAlchemy, compatible with Milvus API."
authors = ["shanhaikang.shk <shanhaikang.shk@oceanbase.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
numpy = ">=1.26.0,<2.0.0"
sqlalchemy = ">=1.4,<2.0.36"
pymysql = "^1.1.1"
aiomysql = "^0.2.0"
sqlglot = "^26.0.1"
pydantic = "^2.10.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pylint = "^3.2.7"

[tool.pytest.ini_options]
log_level = "INFO"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
