[project]
name = "pyobvector"
version = "0.2.23"
description = "A python SDK for OceanBase Vector Store, based on SQLAlchemy, compatible with Milvus API."
authors = [{name="shanhaikang.shk",email="shanhaikang.shk@oceanbase.com"}]
readme = "README.md"
license = "Apache-2.0"
keywords = ["oceanbase", "vector store", "obvector"]
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.17.0",
    "sqlalchemy>=1.4,<=3",
    "pymysql>=1.1.1",
    "aiomysql>=0.3.2",
    "sqlglot>=26.0.1",
    "pydantic>=2.7.0,<3"
]

[project.optional-dependencies]
# pyseekdb requires Python>=3.11; only install on 3.11+ so uv sync --dev works on 3.10
pyseekdb = ["pyseekdb>=0.1.0; python_version >= '3.11'"]

[project.urls]
Homepage = "https://github.com/oceanbase/pyobvector"
Repository = "https://github.com/oceanbase/pyobvector.git"

[dependency-groups]
dev = [
    "pytest>=8.2.2",
    "pylint>=3.2.7",
    "prek>=0.2.17",
    "ruff>=0.14.10",
    "sphinx>=7.2.6",
]

[tool.pytest.ini_options]
log_level = "INFO"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = [
    "UP", # pyupgrade
    "F401", # unused-import
]
